--- a/frontend/scheidsrechter-app/vv-monnickendam/index.html
+++ b/frontend/scheidsrechter-app/vv-monnickendam/index.html
@@ -1045,14 +1045,24 @@
 
         // ===== SCORE =====
         function changeScore(team, delta) {
-            if (team === 'home') {
-                homeScoreValue = Math.max(0, homeScoreValue + delta);
-                homeScore.textContent = homeScoreValue;
-            } else if (team === 'away') {
-                awayScoreValue = Math.max(0, awayScoreValue + delta);
-                awayScore.textContent = awayScoreValue;
-            }
-        }
+    if (team === 'home') {
+        homeScoreValue = Math.max(0, homeScoreValue + delta);
+        homeScore.textContent = homeScoreValue;
+    } else if (team === 'away') {
+        awayScoreValue = Math.max(0, awayScoreValue + delta);
+        awayScore.textContent = awayScoreValue;
+    }
+    // Firebase sync
+    const wedstrijdId = localStorage.getItem('wedstrijdId');
+    if (wedstrijdId && window._firebaseDb) {
+        import("https://www.gstatic.com/firebasejs/12.9.0/firebase-database.js").then(({ ref, update }) => {
+            update(ref(window._firebaseDb, `wedstrijden/${wedstrijdId}`), {
+                thuisscore: homeScoreValue,
+                uitscore: awayScoreValue
+            });
+        });
+    }
+}
 
         // ===== EVENTS =====
         function showEventModal(eventType, team = null) {
