Live score sync naar Firebase toegevoegd

--- a/frontend/scheidsrechter-app/fc-purmerend/index.html
+++ b/frontend/scheidsrechter-app/fc-purmerend/index.html
@@ -1042,15 +1042,25 @@
         }
 
         // ===== SCORE =====
-        function changeScore(team, delta) {
-            if (team === 'home') {
-                homeScoreValue = Math.max(0, homeScoreValue + delta);
-                homeScore.textContent = homeScoreValue;
-            } else if (team === 'away') {
-                awayScoreValue = Math.max(0, awayScoreValue + delta);
-                awayScore.textContent = awayScoreValue;
-            }
-        }
+    function changeScore(team, delta) {
+    if (team === 'home') {
+        homeScoreValue = Math.max(0, homeScoreValue + delta);
+        homeScore.textContent = homeScoreValue;
+    } else if (team === 'away') {
+        awayScoreValue = Math.max(0, awayScoreValue + delta);
+        awayScore.textContent = awayScoreValue;
+    }
+    // Firebase sync
+    const wedstrijdId = localStorage.getItem('wedstrijdId');
+    if (wedstrijdId && window._firebaseDb) {
+        import("https://www.gstatic.com/firebasejs/12.9.0/firebase-database.js").then(({ ref, update }) => {
+            update(ref(window._firebaseDb, `wedstrijden/${wedstrijdId}`), {
+                thuisscore: homeScoreValue,
+                uitscore: awayScoreValue
+            });
+        });
+    }
+}
 
         // ===== EVENTS =====
         function showEventModal(eventType, team = null) {
