Kantine display gekoppeld aan Firebase

--- a/frontend/kantine-display/index.html
+++ b/frontend/kantine-display/index.html
@@ -434,24 +434,97 @@
         </div>
     </div>
 
-    <script>
-        function updateTimestamp() {
-            const now = new Date();
-            const options = { day: 'numeric', month: 'short', year: 'numeric', hour: '2-digit', minute: '2-digit' };
-            document.getElementById('lastUpdate').textContent = now.toLocaleDateString('nl-NL', options).replace(',', ' -');
-        }
-        setInterval(updateTimestamp, 10000);
-        updateTimestamp();
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
+  import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-database.js";
 
-        setInterval(() => {
-            ['time1','time2','time3'].forEach(id => {
-                const el = document.getElementById(id);
-                if (el) {
-                    const t = parseInt(el.textContent);
-                    if (!isNaN(t) && t < 90) el.textContent = (t + 1) + "'";
-                }
-            });
-        }, 60000);
-    </script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAputZcr7XyKRQL4-566a8gpS5R6SEL79U",
+    authDomain: "scorr-c604a.firebaseapp.com",
+    databaseURL: "https://scorr-c604a-default-rtdb.europe-west1.firebasedatabase.app",
+    projectId: "scorr-c604a",
+    storageBucket: "scorr-c604a.firebasestorage.app",
+    messagingSenderId: "413840042688",
+    appId: "1:413840042688:web:3183c36fd20f27ac925b25"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+
+  const vandaag = new Date().toISOString().split('T')[0];
+
+  function updateTimestamp() {
+    const now = new Date();
+    const options = { day: 'numeric', month: 'short', year: 'numeric', hour: '2-digit', minute: '2-digit' };
+    document.getElementById('lastUpdate').textContent = now.toLocaleDateString('nl-NL', options).replace(',', ' -');
+  }
+
+  function renderWedstrijden(wedstrijden) {
+    const container = document.querySelector('.competition-section');
+    const header = container.querySelector('.competition-header');
+    
+    // Verwijder oude wedstrijdkaarten
+    container.querySelectorAll('.match-card').forEach(el => el.remove());
+
+    // Update wedstrijd teller
+    container.querySelector('.match-count').textContent = `${wedstrijden.length} wedstrijden`;
+
+    wedstrijden.forEach(w => {
+      const isLive = w.status === 'bezig';
+      const isAfgelopen = w.status === 'afgelopen';
+      
+      const card = document.createElement('div');
+      card.className = `match-card${isLive ? ' live' : ''}`;
+      card.innerHTML = `
+        <div class="match-status">
+          <div class="match-time${isLive ? ' live' : ''}">${isLive ? 'LIVE' : isAfgelopen ? 'AFG' : w.tijdstip}</div>
+          <div class="status-badge${isAfgelopen ? ' finished' : isLive ? '' : ' scheduled'}">${isAfgelopen ? 'Afgelopen' : isLive ? 'LIVE' : 'Straks'}</div>
+        </div>
+        <div class="teams-container">
+          <div class="team home">
+            <div class="team-logo" style="background:#003399;">
+              <span style="color:white;font-weight:900;font-size:14px;">FCP</span>
+            </div>
+            <div class="team-name">${w.thuisteam}</div>
+          </div>
+          <div class="score-container">
+            <div class="score">${isLive || isAfgelopen ? w.thuisscore : '-'}</div>
+            <div class="score-separator">-</div>
+            <div class="score">${isLive || isAfgelopen ? w.uitscore : '-'}</div>
+          </div>
+          <div class="team away">
+            <div class="team-logo" style="background:#1E2749;">
+              <span style="color:white;font-weight:900;font-size:14px;">UIT</span>
+            </div>
+            <div class="team-name">${w.uitteam}</div>
+          </div>
+        </div>
+      `;
+      container.appendChild(card);
+    });
+
+    updateTimestamp();
+  }
+
+  // Live luisteren naar Firebase
+  onValue(ref(db, 'wedstrijden'), (snapshot) => {
+    const wedstrijden = [];
+    if (snapshot.exists()) {
+      snapshot.forEach((child) => {
+        const data = child.val();
+        if (data.datum === vandaag) {
+          wedstrijden.push(data);
+        }
+      });
+    }
+
+    if (wedstrijden.length > 0) {
+      renderWedstrijden(wedstrijden);
+    } else {
+      document.querySelector('.match-count').textContent = '0 wedstrijden';
+      document.querySelectorAll('.match-card').forEach(el => el.remove());
+    }
+  });
+</script>
 </body>
 </html>
