Login redirect naar scheidsrechter app FC Purmerend

--- a/frontend/auth/login.html
+++ b/frontend/auth/login.html
@@ -310,7 +310,7 @@
         document.getElementById('loginForm').addEventListener('submit', function(e) {
             e.preventDefault();
             // Redirect to team selection after login
-            window.location.href = 'scorr-team-select.html';
+            window.location.href = '/frontend/scheidsrechter-app/fc-purmerend/index.html';
         });
     </script>
 </body>
