--- a/frontend/kantine-display/index.html
+++ b/frontend/kantine-display/index.html
@@ -487,6 +487,7 @@
                 <div class="header-subtitle">Live Wedstrijden</div>
             </div>
         </div>
+        <div style="font-size:11px; font-weight:700; letter-spacing:3px; text-transform:uppercase; color:rgba(240,244,255,0.4); border:1px solid rgba(240,244,255,0.2); padding:4px 14px; border-radius:20px;">PILOT</div>
         <div class="scorr-logo">SCORR</div>
     </div>
 
