Logo styling teruggedraaid naar vorige versie

--- a/frontend/kantine-display/index.html
+++ b/frontend/kantine-display/index.html
@@ -186,11 +186,10 @@
         }
 
         .team-logo img {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
-    display: block;
-    margin: auto;
+    padding: 3px;
     mix-blend-mode: multiply;
 }
 
