FC gewijzigd naar Fc in kantine display

--- a/frontend/kantine-display/index.html
+++ b/frontend/kantine-display/index.html
@@ -271,7 +271,7 @@
         <div class="header-left">
             <div class="club-logo">⚽</div>
             <div>
-                <div class="club-name">FC Purmerend</div>
+                <div class="club-name">Fc Purmerend</div>
                 <div class="header-subtitle">Live Wedstrijden</div>
             </div>
         </div>
@@ -288,7 +288,7 @@
     <div class="container">
         <div class="section-header">
             <div class="section-icon">⚽</div>
-            <div class="section-title">FC Purmerend — Komende 48 uur</div>
+            <div class="section-title">Fc Purmerend — Komende 48 uur</div>
             <div class="match-count" id="matchCount">laden...</div>
         </div>
         <div id="wedstrijden-list">
