FC Purmerend overal gewijzigd naar Fc Purmerend

--- a/frontend/scheidsrechter-app/fc-purmerend/index.html
+++ b/frontend/scheidsrechter-app/fc-purmerend/index.html
@@ -639,7 +639,7 @@
         <div class="score-panel">
             <div class="teams-row">
                 <div class="team-col">
-                    <input type="text" class="team-name-input" id="homeTeamName" value="FC Purmerend" placeholder="Thuisploeg">
+                    <input type="text" class="team-name-input" id="homeTeamName" value="Fc Purmerend" placeholder="Thuisploeg">
                     <div class="score-number" id="homeScore">0</div>
                     <div class="score-btns">
                         <button class="score-btn minus" id="homeMinusBtn">−</button>
@@ -1269,7 +1269,7 @@ td{padding:10px;border-bottom:1px solid #eee;font-size:14px}.row-goal{border-lef
 <div class="header"><h1>${homeTeam} vs ${awayTeam}</h1><div class="score-big">${homeScoreValue} - ${awayScoreValue}</div><div class="meta">${currentDate} | ${currentTime} | Speelduur: ${halfDuration} min per helft</div></div>
 <div class="body"><h3 style="margin-bottom:12px;font-size:16px;">Wedstrijdverloop</h3>
 <table><thead><tr><th>Min</th><th></th><th>Gebeurtenis</th></tr></thead><tbody>${eventsHTML}</tbody></table></div>
-<div class="footer">SCORR — FC Purmerend Scheidsrechter App | ${currentDate} ${currentTime}</div></div>
+<div class="footer">SCORR — Fc Purmerend Scheidsrechter App | ${currentDate} ${currentTime}</div></div>
 <div style="text-align:center;padding:20px;background:#eee"><button onclick="window.print()" style="background:#0A0E27;color:#00FF88;border:none;padding:14px 40px;font-size:16px;font-weight:600;border-radius:8px;cursor:pointer">🖨️ OPSLAAN ALS PDF</button></div>
 </body></html>`;
 
